--- a/page.html
+++ b/page.html
@@ -5,13 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>page</title>
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <h1>Nouvelle page HTML</h1>
 </body>
 </html>
 
-
-Envoyer le fichier page.html sur le repository distant
-1- faire un commit avec le fichier page.html
-2- pousser le commit
