modification de la page.html

--- a/page.html
+++ b/page.html
@@ -8,7 +8,12 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <h1>Nouvelle page HTML</h1>
+    <ul>
+        <li>lundi</li>
+        <li>mardi</li>
+        <li>...</li>
+        <li>dimanche</li>
+    </ul>
 </body>
 </html>
 
