mise à jour de page.html, lien retour accueil

--- a/page.html
+++ b/page.html
@@ -6,14 +6,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>page</title>
     <link rel="stylesheet" href="css/style.css">
+    <script>
+        alert("la page a été modifiée");
+    </script>
 </head>
 <body>
+    <h1>Jour de la semaine</h1>
     <ul>
         <li>lundi</li>
         <li>mardi</li>
-        <li>...</li>
+        <li>mercredi</li>
+        <li>jeudi</li>
+        <li>vendredi</li>
+        <li>samedi</li>
         <li>dimanche</li>
     </ul>
+
+    <a href="index.html">Retour à l'accueil</a>
 </body>
 </html>
 
