modification index.html : table des livres

--- a/index.html
+++ b/index.html
@@ -11,6 +11,26 @@
     <h1>Bienvenue</h1>
     <p>sur le site d'e-commerce</p>
 
+    <table>
+        <thead>
+            <tr>
+                <th>Titre</th>
+                <th>Auteur</th>
+            </tr>
+        </thead>
+
+        <tbody>
+            <tr>
+                <td>1984</td>
+                <td>George Orwell</td>
+            </tr>
+            <tr>
+                <td>I, robot</td>
+                <td>Isaac Asimov</td>
+            </tr>
+        </tbody>
+    </table>
+
     <a href="page.html">page</a>
 </body>
 </html>
