--- a/index.html
+++ b/index.html
@@ -6,31 +6,34 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="undefined" crossorigin="anonymous">
 </head>
 <body>
-    <h1>Bienvenue</h1>
-    <p>sur le site d'e-commerce</p>
+    <div class="container">
+        <h1>Bienvenue</h1>
+        <p>sur le site d'e-commerce</p>
 
-    <table>
-        <thead>
-            <tr>
-                <th>Titre</th>
-                <th>Auteur</th>
-            </tr>
-        </thead>
+        <table class="table table-bordered">
+            <thead class="thead-dark">
+                <tr>
+                    <th>Titre</th>
+                    <th>Auteur</th>
+                </tr>
+            </thead>
 
-        <tbody>
-            <tr>
-                <td>1984</td>
-                <td>George Orwell</td>
-            </tr>
-            <tr>
-                <td>I, robot</td>
-                <td>Isaac Asimov</td>
-            </tr>
-        </tbody>
-    </table>
+            <tbody>
+                <tr>
+                    <td>1984</td>
+                    <td>George Orwell</td>
+                </tr>
+                <tr>
+                    <td>I, robot</td>
+                    <td>Isaac Asimov</td>
+                </tr>
+            </tbody>
+        </table>
 
-    <a href="page.html">page</a>
+        <a href="page.html">page</a>
+    </div>
 </body>
 </html>
